# nl2sql-langgraph

./: .env.example  .gitignore  CLAUDE.md  README.md  debug_output.txt  pyproject.toml  requirements.txt
.claude/: ARCHITECTURE.md  framework-config.json  history.jsonl  settings.json  settings.local.json  starter-kit-projects.json  starter-kit-source-path
.claude/agents/: code-reviewer.md  project-manager.md
.claude/commands/: add-todo.md  check.md  init-docs.md  next.md  progress.md  remember.md  start.md  sync.md  update-status.md
.claude/docs/: AI代码追踪系统设计手册.md  LLM集成指南.md  数据库连接手册.md  环境配置指南.md
.claude/hooks/: post-tool-use.js  pre-tool-use.js  prepare-commit-msg.js  skill-forced-eval.js  stop.js
.claude/memory/: MEMORY.md  lessons.md  project.md  thinking-mode-fix.md  user.md
.claude/plans/: nl2sql-agent-react-architecture.md
.claude/plugins/: blocklist.json
ai-sessions/: steph-ai-session-laptop-cch99buc.json
app/: config_service.py  datasource_manager.py  example_sql_generator.py  graph_builder.py  history_routes.py  knowledge_manager.py  learning_service.py  main.py  nodes.py  prompt_templates.py  schema_classifier.py  schema_descriptor.py  schema_engine.py  settings_routes.py  state.py  streaming.py  tools.py
db/: generate_sample_data.py  mysql_schema.sql  schema.sql  seed.sql  vector_schema.sql
docs/: 前端开发指南.md  后端开发指南.md  项目架构说明.md
frontend/: index.html  package-lock.json  package.json  tsconfig.node.tsbuildinfo  vite.config.js  vite.config.ts
scripts/: generate_data_standard.py  init_embeddings.py
static/: index.html
(+126 files in other folders)
