[project]
name = "nl2sql-langgraph"
version = "0.1.0"
description = "LangGraph 梭子形多 Agent NL2SQL 示例（FastAPI + Postgres）"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "langgraph>=0.2",
  "langchain-core>=0.3",
  "langchain-openai>=0.2",
  "pydantic>=2.6",
  "psycopg[binary]>=3.1",
  "python-dotenv>=1.0",
]

